--- a/sidebar_bootstrap/index.html
+++ b/sidebar_bootstrap/index.html
@@ -147,7 +147,7 @@
     <div id="wrapper">
  
         <!-- Sidebar -->
-        <div id="sidebar-wrapper">
+        <div id="sidebar-wrapper" class="painelLateral">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
@@ -179,13 +179,14 @@
         </div>
         <!-- /#sidebar-wrapper -->
 
+        <a href="#" class="toggles"><i class="glyphicon glyphicon-white glyphicon-chevron-left"></i></a>
+
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <div class="container-fluid">
                 <h1>Simple Sidebar</h1>
                 <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
                 <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                <a href="#menu-toggle" class="btn btn-primary" id="menu-toggle">Toggle Menu</a>
             </div>
         </div>
         <!-- /#page-content-wrapper -->
@@ -193,15 +194,22 @@
     </div>
     <!-- /#wrapper -->
 
+
+
     <!-- Bootstrap core JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 
     <!-- Menu Toggle Script -->
     <script>
-    $("#menu-toggle").click(function(e) {
+    $(".toggles").click(function(e) {
         e.preventDefault();
         $("#wrapper").toggleClass("toggled");
+    });
+
+    $(".navbar-toggle").click(function(e){
+        //e.preventDefault();
+        $("#sidebar-wrapper-fixed").toggleClass("open");
     });
     </script>
 
